--- a/PetFinder/Views/Posts/Create.cshtml
+++ b/PetFinder/Views/Posts/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Add New Post</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Posts", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -52,12 +52,20 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Image, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input name="Image" type="file" />
+                @Html.ValidationMessageFor(model => model.Image)
+            </div>
+        </div>
+
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         @*<div class="form-group">
             @Html.LabelFor(model => model.isReunited, htmlAttributes: new { @class = "control-label col-md-2" })
