--- a/PetFinder/Views/Posts/Index.cshtml
+++ b/PetFinder/Views/Posts/Index.cshtml
@@ -1,11 +1,8 @@
 ﻿@model IEnumerable<PetFinder.Models.Post>
 
-@{
-    ViewBag.Title = "Index";
-}
 
-<h2>Posts</h2>
 <div class="top-buffer bottom-buffer col-xs-6">
+    <h4 class="bottom-buffer">Use the search form to find a lost pet!</h4>
     @using (Html.BeginForm())
     {
         <b class="search-box">Search by Color &nbsp;</b><br />
@@ -17,20 +14,13 @@
             @Html.RadioButton("option", "Calico")<text> Calico</text><br />
             @Html.RadioButton("option", "Tabby")<text> Tabby</text><br />
 
-            <b class="search-box">Animal Type: &nbsp;</b>
+            <b class="search-box">Search By Animal: &nbsp;</b>
             @Html.TextBox("animalType")<input type="submit" value="Search" />
-    }
-
-    @if (User.IsInRole("Admin"))
-    {
-        <p class="top-buffer">
-            @Html.ActionLink("Create New", "Create")
-        </p>
     }
 
 </div>
 
-
+<br class="clr" />
 
 <p>
     @Html.ActionLink("Create New", "Create")
