added date time view

--- a/PetFinder/Views/Posts/Details.cshtml
+++ b/PetFinder/Views/Posts/Details.cshtml
@@ -1,8 +1,5 @@
 ﻿@model PetFinder.Models.Post
 
-@{
-    ViewBag.Title = "Details";
-}
 
 <h2>Details</h2>
 
@@ -37,9 +34,9 @@
         <dt>
             @Html.DisplayNameFor(model => model.PostDate)
         </dt>
-
+        <!-- Added value.toshortdate string to not show the time in the details view-->
         <dd>
-            @Html.DisplayFor(model => model.PostDate)
+            @Model.PostDate.Value.ToShortDateString()
         </dd>
 
         <dt>
@@ -66,7 +63,7 @@
             @Html.DisplayFor(model => model.Image)
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.isReunited)
         </dt>
 
@@ -96,7 +93,7 @@
 
         <dd>
             @Html.DisplayFor(model => model.UserID)
-        </dd>
+        </dd>*@
 
     </dl>
 </div>
