--- a/PetFinder/Views/Home/Index.cshtml
+++ b/PetFinder/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿<div class="top-buffer">
+    <div class="main-image col-lg-10 col-lg-offset-1">
+        <img src="~/Content/Images/Paw.png" />
+    </div>
+</div>
+<br class="clr" />
 
 
 
