--- a/PetFinder/Content/Site.css
+++ b/PetFinder/Content/Site.css
@@ -1,6 +1,8 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 10px;
     padding-bottom: 20px;
+    background: url(../Content/Images/halftone.png);
+    font-family: 'Nunito', sans-serif;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -33,4 +35,12 @@ textarea {
 
 .top-buffer {
     margin-top: 50px;
+}
+
+.main-image{
+    height: 700px;
+}
+
+.main-image img {
+    box-shadow: 0px 3px 8px #2a2a2a;
 }
