--- a/PetFinder/Views/Posts/Details.cshtml
+++ b/PetFinder/Views/Posts/Details.cshtml
@@ -14,6 +14,13 @@
         <dd>
             @Html.DisplayFor(model => model.AnimalType.Species)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Image)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Image)
+        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Color.Hue)
@@ -38,12 +45,12 @@
         <dd>
             @Model.PostDate.Value.ToShortDateString()
         </dd>
-
-        <dt>
+  
+        <dt class="top-buffer">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
 
-        <dd>
+        <dd class="top-buffer">
             @Html.DisplayFor(model => model.Title)
         </dd>
 
@@ -55,13 +62,7 @@
             @Html.DisplayFor(model => model.Message)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Image)
-        </dd>
+    
 
         @*<dt>
             @Html.DisplayNameFor(model => model.isReunited)
@@ -98,6 +99,7 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.PostID }) |
+    @Html.ActionLink("Add Comment", "Create", "Comments") |
+    @*@Html.ActionLink("Add Comment", "Create", "Comments", new { id = Model.PostID }) |*@
     @Html.ActionLink("Back to List", "Index")
 </p>
