--- a/PetFinder/Views/Posts/Create.cshtml
+++ b/PetFinder/Views/Posts/Create.cshtml
@@ -51,13 +51,13 @@
             </div>
         </div>
 
-        @*<div class="form-group">
+        <div class="form-group">
             @Html.LabelFor(model => model.Image, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <input name="Image" type="file" />
                 @Html.ValidationMessageFor(model => model.Image)
             </div>
-        </div>*@
+        </div>
 
         @*<div class="form-group">
             @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
