--- a/PetFinder/Views/Posts/Details.cshtml
+++ b/PetFinder/Views/Posts/Details.cshtml
@@ -19,7 +19,8 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Image)
+            <img src="@Url.Content(Model.Image)" style="height: 50px; width: 50px;"/>
+            @*@Html.DisplayFor(model => model.Image)*@
         </dd>
 
         <dt>
