--- a/PetFinder/Views/Comments/Index.cshtml
+++ b/PetFinder/Views/Comments/Index.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Comments</h2>
 
-<p>
+@*<p>
     @Html.ActionLink("Create New", "Create")
-</p>
+</p>*@
 <table class="table">
     <tr>
         @*<th>
@@ -40,11 +40,11 @@
         <td>
             @Html.DisplayFor(modelItem => item.UserID)
         </td>*@
-        <td>
+        @*<td>
             @Html.ActionLink("Edit", "Edit", new { id=item.CommentID }) |
             @Html.ActionLink("Details", "Details", new { id=item.CommentID }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.CommentID })
-        </td>
+        </td>*@
     </tr>
 }
 
