--- a/PetFinder/Views/Posts/Details.cshtml
+++ b/PetFinder/Views/Posts/Details.cshtml
@@ -14,15 +14,15 @@
         <dd>
             @Html.DisplayFor(model => model.AnimalType.Species)
         </dd>
+        <br />
         <dt>
             @Html.DisplayNameFor(model => model.Image)
         </dt>
 
         <dd>
             <img src="@Url.Content(Model.Image)" style="height: 250px; width: 250px;"/>
-            @*@Html.DisplayFor(model => model.Image)*@
         </dd>
-
+        <br />
         <dt>
             @Html.DisplayNameFor(model => model.Color.Hue)
         </dt>
@@ -42,7 +42,6 @@
         <dt>
             @Html.DisplayNameFor(model => model.PostDate)
         </dt>
-        <!-- Added value.toshortdate string to not show the time in the details view-->
         <dd>
             @Model.PostDate.Value.ToShortDateString()
         </dd>
@@ -62,51 +61,36 @@
         <dd>
             @Html.DisplayFor(model => model.Message)
         </dd>
-
-    
-
-        @*<dt>
-            @Html.DisplayNameFor(model => model.isReunited)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.isReunited)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.isPetUser)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.isPetUser)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.isPetFinder)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.isPetFinder)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UserID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserID)
-        </dd>*@
-
     </dl>
 </div>
-<!--This div should show the comments tt belong to this post ID-->
-<div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUBB9Y1Zp2XUbMxdoBx59gnumFO9bJfiM"></script>
+<script type="text/javascript">
+    $(document).ready(function myMap() {
+        var geocoder = new google.maps.Geocoder();
+        var area = new google.maps.LatLng(43.03, -87.90);
+        var mapCanvas = document.getElementById("map");
+        var mapOptions = { center: area, zoom: 12 };
+        var map = new google.maps.Map(mapCanvas, mapOptions);
+
+        var marker = new google.maps.Marker({
+            position: area,
+            map: map
+        });
+    });
+</script> 
+@if (User.IsInRole("Customer"))
+{
+    <div id="map" class="top-buffer bottom-buffer col-xs-10 col-xs-offset-1"></div>
+}
+<!--This div should show the comments that belong to this post ID-->
+<div class="top-buffer bottom-buffer">
     @*@Html.Partial("_Details_Partial", new PetFinder.Models.Comment())*@
     @*@Html.ActionLink("View Comments", "Index", "Comments")*@ 
     <a href="@Url.Action("Index", "Comments", new { id = Model.PostID })" class="btn btn-primary">Get Comments</a>
 </div>
 <p>
     @Html.ActionLink("Add Comment", "Create", "Comments") |
-    @*@Html.ActionLink("Add Comment", "Create", "Comments", new { id = Model.PostID }) |*@
     @Html.ActionLink("Back to List", "Index")
 </p>
