--- a/PetFinder/Views/Shared/_LoginPartial.cshtml
+++ b/PetFinder/Views/Shared/_LoginPartial.cshtml
@@ -6,10 +6,20 @@
     @Html.AntiForgeryToken()
 
     <ul class="nav navbar-nav navbar-right">
+        @if (User.IsInRole("Customer"))
+        {
+            <li>@Html.ActionLink("Add New Post", "Create", "Posts")</li>
+                <li>@Html.ActionLink("View All Posts", "Index", "Posts")</li>
+        }
+        @if (User.IsInRole("Admin"))
+        {
+            <li>@Html.ActionLink("View All Posts", "Index", "Posts")</li>
+        }
         <li>
             @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+       
     </ul>
     }
 }
