--- a/PetFinder/Content/Site.css
+++ b/PetFinder/Content/Site.css
@@ -44,3 +44,19 @@ textarea {
 .main-image img {
     box-shadow: 0px 3px 8px #2a2a2a;
 }
+
+#map {
+    width: 100%;
+	height: 500px;
+	border: 1px solid black;
+	box-shadow: 2px 2px 2px #ddd;
+}
+
+.intro-text {
+    font-size: 3rem;
+}
+
+.intro-text h1 {
+    font-family: 'Zeyada', cursive;
+    font-size: 60px;
+}
