--- a/PetFinder/Views/Home/Index.cshtml
+++ b/PetFinder/Views/Home/Index.cshtml
@@ -1,9 +1,20 @@
-﻿<div class="top-buffer">
-    <div class="main-image col-lg-10 col-lg-offset-1">
+﻿@*<div class="top-buffer">
+    <div class="intro-text bottom-buffer text-center">
+        <h1>Helping lost pets find their way home!</h1>
+    </div>
+    <div class="main-image">
+        <img src="~/Content/Images/lost.jpg" />
+    </div>
+</div>
+<br class="clr" />*@
+
+<div class="top-buffer">
+    @*<div class="intro-text bottom-buffer text-center">
+        <h1>Helping lost pets find their way home!</h1>
+    </div>*@
+    <div class="main-image">
         <img src="~/Content/Images/Paw.png" />
     </div>
 </div>
 <br class="clr" />
-
-
 
