--- a/PetFinder/Views/Posts/Delete.cshtml
+++ b/PetFinder/Views/Posts/Delete.cshtml
@@ -12,30 +12,6 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.AnimalType.Species)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AnimalType.Species)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Color.Hue)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Color.Hue)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Location.ZipCode)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Location.ZipCode)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.PostDate)
         </dt>
 
@@ -64,41 +40,8 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Image)
+            <img src="@Url.Content(Model.Image)" style="height: 100px; width: 100px;" />
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.isReunited)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.isReunited)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.isPetUser)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.isPetUser)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.isPetFinder)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.isPetFinder)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UserID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserID)
-        </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
