--- a/PetFinder/Views/Posts/Index.cshtml
+++ b/PetFinder/Views/Posts/Index.cshtml
@@ -3,8 +3,13 @@
 
 <div class="top-buffer bottom-buffer col-xs-6">
     <h4 class="bottom-buffer">Use the search form to find a lost pet!</h4>
+    <br />
     @using (Html.BeginForm())
     {
+        <b class="search-box">Search by LOST or FOUND &nbsp;</b><br />
+            @Html.RadioButton("status", "1")<text> Lost</text><br />
+            @Html.RadioButton("status", "2")<text> Found</text><br />
+
         <b class="search-box">Search by Color &nbsp;</b><br />
             @Html.RadioButton("option", "Black")<text> Black</text><br />
             @Html.RadioButton("option", "Brown")<text> Brown</text><br />
@@ -14,7 +19,7 @@
             @Html.RadioButton("option", "Calico")<text> Calico</text><br />
             @Html.RadioButton("option", "Tabby")<text> Tabby</text><br />
             <br />
-            <b class="search-box">Search By Animal: &nbsp;</b>
+            <b class="search-box top-buffer">Enter Species: &nbsp;</b>
             @Html.TextBox("animalType")<input type="submit" value="Search" />
     }
 
@@ -103,8 +108,11 @@
         </td>*@
         <td>
            
-            @Html.ActionLink("Details", "Details", new { id=item.PostID })
-          
+            @Html.ActionLink("Details", "Details", new { id=item.PostID }) 
+            @if (User.IsInRole("Admin"))
+                {
+                    @Html.ActionLink("Delete", "Delete", new { id = item.PostID })
+                }   
         </td>
     </tr>
 }
