--- a/PetFinder/Views/Shared/_Layout.cshtml
+++ b/PetFinder/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700|Zeyada" rel="stylesheet">
 
 </head>
 <body>
@@ -22,9 +22,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Role", "Index", "Role")</li>
-                    <li>@Html.ActionLink("Add New Post", "Create", "Posts")</li>
-                    <li>@Html.ActionLink("View All Posts", "Index", "Posts")</li>
+            @if (User.IsInRole("Admin"))
+            {
+                <li>@Html.ActionLink("Role", "Index", "Role")</li>
+            }
+                   
+                   
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
