--- a/PetFinder/Views/Shared/_Layout.cshtml
+++ b/PetFinder/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 <ul class="nav navbar-nav">
             @if (User.IsInRole("Admin"))
             {
-                <li>@Html.ActionLink("Role", "Index", "Role")</li>
+                <li>@Html.ActionLink("Admin Portal", "Index", "Role")</li>
             }
                    
                    
