--- a/PetFinder/Content/Site.css
+++ b/PetFinder/Content/Site.css
@@ -3,6 +3,7 @@
     padding-bottom: 20px;
     background: url(../Content/Images/halftone.png);
     font-family: 'Nunito', sans-serif;
+    color: black;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -59,4 +60,29 @@ textarea {
 .intro-text h1 {
     font-family: 'Zeyada', cursive;
     font-size: 60px;
+}
+
+article {
+    margin-top: 15px;
+}
+
+.alert-message {
+    background-color: orange;
+}
+
+.bottom-buffer a {
+    margin: 20px;
+}
+
+.create-form {
+    border: 1px solid black;
+}
+
+.icons img {
+    text-align: center;
+}
+
+.big-text {
+    font-size: 35px;
+    font-weight: bold;
 }
