--- a/PetFinder/Views/Posts/Index.cshtml
+++ b/PetFinder/Views/Posts/Index.cshtml
@@ -2,22 +2,21 @@
 
 
 <div class="top-buffer bottom-buffer col-xs-6">
-    <h4 class="bottom-buffer">Use the search form to find a lost pet!</h4>
     <br />
     @using (Html.BeginForm())
     {
         <b class="search-box">Search by LOST or FOUND &nbsp;</b><br />
             @Html.RadioButton("status", "1")<text> Lost</text><br />
             @Html.RadioButton("status", "2")<text> Found</text><br />
-
+            <br />
         <b class="search-box">Search by Color &nbsp;</b><br />
-            @Html.RadioButton("option", "Black")<text> Black</text><br />
-            @Html.RadioButton("option", "Brown")<text> Brown</text><br />
-            @Html.RadioButton("option", "Yellow")<text> Yellow</text><br />
-            @Html.RadioButton("option", "White")<text> White</text><br />
-            @Html.RadioButton("option", "Red")<text> Red</text><br />
-            @Html.RadioButton("option", "Calico")<text> Calico</text><br />
-            @Html.RadioButton("option", "Tabby")<text> Tabby</text><br />
+        @Html.RadioButton("option", "Black")<text> Black &nbsp;&nbsp;&nbsp;&nbsp;</text>
+        @Html.RadioButton("option", "Brown")<text> Brown</text><br />
+        @Html.RadioButton("option", "Yellow")<text> Yellow&nbsp;&nbsp;&nbsp;</text>
+        @Html.RadioButton("option", "White")<text> White</text><br />
+        @Html.RadioButton("option", "Red")<text> Red&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</text>
+        @Html.RadioButton("option", "Calico")<text> Calico</text><br />
+        @Html.RadioButton("option", "Tabby")<text> Tabby</text><br />
             <br />
             <b class="search-box top-buffer">Enter Species: &nbsp;</b>
             @Html.TextBox("animalType")<input type="submit" value="Search" />
@@ -28,7 +27,7 @@
 <br class="clr" />
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <a href="@Url.Action("Create", "Posts")" class="btn btn-primary">Add a Post</a>
 </p>
 <table class="table">
     <tr>
@@ -53,19 +52,6 @@
         <th>
             @Html.DisplayNameFor(model => model.Message)
         </th>
-      
-        @*<th>
-            @Html.DisplayNameFor(model => model.isReunited)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.isPetUser)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.isPetFinder)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserID)
-        </th>*@
         <th></th>
     </tr>
 
@@ -76,7 +62,6 @@
         </td>
         <td>
             <img src="@Url.Content(item.Image)" style="height: 50px; width: 50px;"/>
-            @*@Html.DisplayFor(modelItem => item.Image)*@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Color.Hue)
@@ -84,8 +69,9 @@
         <td>
             @Html.DisplayFor(modelItem => item.Location.ZipCode)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PostDate)
+        <td>         
+            @*@Html.DisplayFor(modelItem => item.PostDate)*@
+            @item.PostDate.Value.ToShortDateString()
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Title)
@@ -93,26 +79,14 @@
         <td>
             @Html.DisplayFor(modelItem => item.Message)
         </td>
-     
-        @*<td>
-            @Html.DisplayFor(modelItem => item.isReunited)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.isPetUser)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.isPetFinder)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserID)
-        </td>*@
         <td>
            
             @Html.ActionLink("Details", "Details", new { id=item.PostID }) 
             @if (User.IsInRole("Admin"))
                 {
-                    @Html.ActionLink("Delete", "Delete", new { id = item.PostID })
-                }   
+                    @Html.ActionLink("Delete", "Delete", new { id = item.PostID })<br />
+                    @Html.ActionLink("Edit", "Edit", new { id = item.PostID })
+            }   
         </td>
     </tr>
 }
