--- a/PetFinder/Views/Shared/_Details_Partial.cshtml
+++ b/PetFinder/Views/Shared/_Details_Partial.cshtml
@@ -1,44 +1,52 @@
-﻿@model PetFinder.Models.Comment
+﻿@model IEnumerable<PetFinder.Models.Comment>
 
-<div>
-    <h4>Comment</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        @*<dt>
-            @Html.DisplayNameFor(model => model.Post.Title)
-        </dt>
+@{
+    ViewBag.Title = "Index";
+}
 
-        <dd>
-            @Html.DisplayFor(model => model.Post.Title)
-        </dd>*@
+<h2>Comments</h2>
 
-        <dt>
+@*<p>
+        @Html.ActionLink("Create New", "Create")
+    </p>*@
+<table class="table">
+    <tr>
+        @*<th>
+                @Html.DisplayNameFor(model => model.Post.Title)
+            </th>*@
+        <th>
             @Html.DisplayNameFor(model => model.Message)
-        </dt>
+        </th>
+        @*<th>
+                @Html.DisplayNameFor(model => model.CommentDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.UserID)
+            </th>*@
+        <th></th>
+    </tr>
 
-        <dd>
-            @Html.DisplayFor(model => model.Message)
-        </dd>
+    @foreach (var item in Model)
+    {
+        <tr>
+            @*<td>
+                    @Html.DisplayFor(modelItem => item.Post.Title)
+                </td>*@
+            <td>
+                @Html.DisplayFor(modelItem => item.Message)
+            </td>
+            @*<td>
+                    @Html.DisplayFor(modelItem => item.CommentDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserID)
+                </td>*@
+            @*<td>
+                    @Html.ActionLink("Edit", "Edit", new { id=item.CommentID }) |
+                    @Html.ActionLink("Details", "Details", new { id=item.CommentID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id=item.CommentID })
+                </td>*@
+        </tr>
+    }
 
-        @*<dt>
-            @Html.DisplayNameFor(model => model.CommentDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CommentDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UserID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserID)
-        </dd>*@
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.CommentID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+</table>
